--- a/src/main/resources/templates/body/board/write.html
+++ b/src/main/resources/templates/body/board/write.html
@@ -67,7 +67,7 @@
             add_borad를 컨트롤러에서 찾을거다. 근데 컨트롤러에선 add_borad라는 밸류를 가진 컨트롤러가 없음
             따라서 게시글 등록 로직이 실행되지 않은거임.-->
         <!--<button type="submit" id="submit_btn" th:href="@{/board/list.go}">작성</button>-->
-        <button type="submit" id="submit_btn" value="submit" class="button" th:href="@{/board/list.go}">작성</button>
+        <button type="submit" id="submit_btn" value="submit" class="button" th:href="@{board/list.go}">작성</button>
     </form>
 </body>
 </html>
