--- a/src/main/resources/templates/body/board/write.html
+++ b/src/main/resources/templates/body/board/write.html
@@ -53,10 +53,10 @@
                 4. Model And View 나 Model 사용 해서 setAttribute로 List에 별칭을 붙임
                 5. List 자체는 html 사용 할 수 없고, 별칭으로 사용 할 수 있음
                 6. AttributeName으로 th:each로 List를 쪼개서 사용할 수 있음-->
-            <select>
+            <select name="category_code">
                 <option value="n">카테고리를 선택하세요.</option>
                 <th:block th:each="menu,index : ${mnList}">
-                    <option th:value="${menu.category_code}" th:text="${menu.category_name}">메뉴</option>
+                    <option name="category_name" th:value="${menu.category_code}" th:text="${menu.category_name}">메뉴</option>
                 </th:block>
 
             </select>
