--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -12,5 +12,9 @@
     <script th:src="@{/js/script.js}"></script>
     <script th:src="@{/ckor.js}"></script>
 
+    <!--join-->
+    <script th:src="@{/js/jquery-3.2.1.min.js}"></script>
+    <script th:src="@{/js/join/kpress.js}"></script>
+
 </th:block>
 </html>
