--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<script src="js/jquery-3.2.1.min.js"></script>
 
 <th:block th:fragment="Footer">
     <!-- Footer-->
@@ -13,8 +14,7 @@
     <script th:src="@{/ckor.js}"></script>
 
     <!--join-->
-    <script th:src="@{/js/jquery-3.2.1.min.js}"></script>
-    <script th:src="@{/js/join/kpress.js}"></script>
+
 
 </th:block>
 </html>
