--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -11,6 +11,8 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="../../../../../../Downloads/startbootstrap-small-business-gh-pages/assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <script  src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!--<script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>-->
         <link th:href="@{/css/styles.css}" rel="stylesheet" />
     </head>
 </head>
