--- a/src/main/resources/templates/body/user/join.html
+++ b/src/main/resources/templates/body/user/join.html
@@ -3,68 +3,110 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="~{layout/default}">
-<script src="js/jquery-3.2.1.min.js"></script>
 
-<script>
-    function pwd_keypress(){
-        var reg = /^(?=.*[A-Za-z])(?=.*\d)(?=.*[~!@#$%^&*()+|=])[A-Za-z\d~!@#$%^&*()+|=]{8,16}$/;
-        var pwd = $("#user_pwd").val();
-        if(false == reg.test(pwd)){
-            document.write("비밀번호는 8자 이상이어야 하며, 숫자/대문자/소문자/특수문자를 모두 포함해야 합니다.");
-
-        }else{
-            document.write("사용가능한 비밀번호입니다.");
-        }
-    }
-
-    function equals(){
-        var user_pwd = document.getElementById("user_pwd").value;
-        var user_pwd_chk = document.getElementById("user_pwd_chk").value;
-
-        if(user_pwd_chk == "") {
-            document.getElementById("pwd_chk_text").innerHTML=""
-        }else if(user_pwd != user_pwd_chk){
-            document.getElementById("pwd_chk_text").innerHTML="비밀번호가 일치하지 않습니다."
-        }else{
-            document.getElementById("pwd_chk_text").innerHTML="비밀번호가 일치합니다."
-        }
-    }
-</script>
 
 
 <body layout:fragment="content">
 
+<script>
+    let user_id;
+    let user_name;
+    let user_nickname;
+    let user_email;
+    let user_pwd;
+    let user_pwd_chk;
+    let reg = /^(?=.*[A-Za-z])(?=.*\d)(?=.*[~!@#$%^&*()+|=])[A-Za-z\d~!@#$%^&*()+|=]{8,16}$/;
+    let chk_reg;
+    let frm;
+    let pwd_result = false;
+
+    $(document).ready(function (e){
+        user_name = $('#user_name');
+        user_nickname = $('#user_nickname');
+        user_id = $('#user_id');
+        user_pwd = $('#user_pwd');
+        user_pwd_chk = $('#user_pwd_chk');
+        user_email = $('#user_email');
+        chk_reg = $('#chk_reg');
+
+        function fn_formVaild(){
+            if(!user_name.val()) {
+                alert('이름 입력하세요')
+                return false;
+            }
+            if(!user_nickname.val()) {
+                alert('닉네임을 입력하세요')
+                return false;
+            }
+            if(!user_id.val()) {
+                alert('아이디를 입력하세요')
+                return false;
+            }
+            if(!user_pwd.val()) {
+                alert('비밀번호를 입력하세요')
+                return false;
+            } else {
+                if(!pwd_result) {
+                    console.log(pwd_result);
+                    alert('비밀번호를 확인해주세요.')
+                    return false;
+                }
+            }
+            if(!user_email.val()) {
+                alert('이메일을 입력하세요')
+                return false;
+            }
+            return true;
+        }
+
+        user_pwd_chk.on('keyup', function (e){
+            let user_pwd = $('#user_pwd').val()
+            let user_pwd_chk = $('#user_pwd_chk').val()
+            chk_reg.text('')
+            if(user_pwd.val() != user_pwd_chk.val()){
+                chk_reg.text('비밀번호가 일치하지않습니다.')
+                pwd_result = false;
+            }else{
+                chk_reg.text('비밀번호가 일치합니다.')
+                pwd_result = true;
+            }
+        })
+
+        user_pwd.on('keyup', function (e){
+            let user_pwd = $('#user_pwd').val()
+            let user_pwd_chk = $('#user_pwd_chk').val()
+            chk_reg.text('')
+            if(!reg.test(user_pwd.val())){
+                chk_reg.text('비밀번호는 8자 이상이어야 하며, 숫자/대문자/소문자/특수문자를 모두 포함해야 합니다.')
+                pwd_result = false;
+            }else{
+                chk_reg.text('사용 가능한 비밀번호입니다.')
+            }
+        })
+
+        $('#btn_save').on('click',function (e){
+            frm = $('#form');
+            if(fn_formVaild()){
+                frm.prop('action','/user/register.do');
+                frm.submit();
+            }
+        })
+    });
+</script>
 <h1>유저 회원가입 페이지</h1>
-<form th:action="@{/user/register.do}" method="post" modelAttribute="userVO">
-    <!--
-    _USER_NAME		VARCHAR(100),
-	_USER_NICKNAME	VARCHAR(30),
-	_USER_ID		VARCHAR(100),
-	_USER_PWD		VARCHAR(100),
-	_USER_EMAIL		VARCHAR(300)
-    -->
-
+<input id="pwd_result" type="hidden">
+<form method="post" id="form" name="form" modelAttribute="userVO">
     <input id="user_name" name="user_name" placeholder="유저이름"><br/><br/>
-
     <input id="user_nickname" name="user_nickname" placeholder="유저닉네임"><br/><br/>
-
     <input id="user_id" name="user_id" placeholder="유저아이디"><br/><br/>
-
-    <input id="user_pwd" type="password" name="user_pwd" placeholder="패스워드" onkeypress="pwd_keypress(this)">
-    <font id="chk_reg" name="chk_reg" size="2" ></font><br/>
-
-    <input id="user_pwd_chk" type="password" name="user_pwd_chk" onkeyup="equals(this)" placeholder="패스워드확인">
-    <td id="pwd_chk_text"><br/>
-
-    <!--<a><font size="2"/>  ****@****.com(co.kr, net, or.kr)양식에 맞출것. </a><br/>-->
+    <input id="user_pwd" type="password" name="user_pwd" placeholder="패스워드">
+    <b id="chk_reg" name="chk_reg" size="2" ></b><br/>
+    <input id="user_pwd_chk" type="password" name="user_pwd_chk1"  placeholder="패스워드확인">
     <input id="user_email" name="user_email" placeholder="유저이메일"><br/><br/>
-
-    <button type="submit">가입</button>
-
-
 </form>
-
+<button id="btn_save">가입</button>
 </body>
+
 
 </html>
 
