--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,9 +9,9 @@
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script th:src="@{/js/script.js}"></script>
-    <script th:src="@{/ckor.js}"></script>
+    <!-- Core theme JS--><!--
+    <script type="text/javascript" th:src="@{/js/script.js}"></script>
+    <script th:src="@{/ckor.js}"></script>-->
 
     <!--join-->
 
