--- a/src/main/resources/templates/body/user/join.html
+++ b/src/main/resources/templates/body/user/join.html
@@ -13,19 +13,20 @@
     let user_name;
     let user_nickname;
     let user_email;
-    let user_pwd;
-    let user_pwd_chk;
+    let fn_user_pwd;
+    let fn_user_pwd_chk;
     let reg = /^(?=.*[A-Za-z])(?=.*\d)(?=.*[~!@#$%^&*()+|=])[A-Za-z\d~!@#$%^&*()+|=]{8,16}$/;
     let chk_reg;
     let frm;
+    let blank = /^\s+|\s+$/g;
     let pwd_result = false;
 
     $(document).ready(function (e){
         user_name = $('#user_name');
         user_nickname = $('#user_nickname');
         user_id = $('#user_id');
-        user_pwd = $('#user_pwd');
-        user_pwd_chk = $('#user_pwd_chk');
+        fn_user_pwd = $('#user_pwd');
+        fn_user_pwd_chk = $('#user_pwd_chk');
         user_email = $('#user_email');
         chk_reg = $('#chk_reg');
 
@@ -42,7 +43,7 @@
                 alert('아이디를 입력하세요')
                 return false;
             }
-            if(!user_pwd.val()) {
+            if(!fn_user_pwd.val()) {
                 alert('비밀번호를 입력하세요')
                 return false;
             } else {
@@ -59,28 +60,29 @@
             return true;
         }
 
-        user_pwd_chk.on('keyup', function (e){
-            let user_pwd = $('#user_pwd').val()
-            let user_pwd_chk = $('#user_pwd_chk').val()
+        fn_user_pwd.on('keypress', function (e){
             chk_reg.text('')
-            if(user_pwd.val() != user_pwd_chk.val()){
-                chk_reg.text('비밀번호가 일치하지않습니다.')
+            if(!reg.test(fn_user_pwd.val())){
+                chk_reg.text('비밀번호는 8자 이상이어야 하며, 숫자/대문자/소문자/특수문자를 모두 포함해야 합니다.')
                 pwd_result = false;
-            }else{
-                chk_reg.text('비밀번호가 일치합니다.')
-                pwd_result = true;
+            }
+            else if(fn_user_pwd.val().replace(blank,'') == ""){
+                chk_reg.text('공백!공백!공백!')
+                pwd_result = false;
+            }
+            else{
+                chk_reg.text('사용 가능한 비밀번호입니다.')
             }
         })
 
-        user_pwd.on('keyup', function (e){
-            let user_pwd = $('#user_pwd').val()
-            let user_pwd_chk = $('#user_pwd_chk').val()
+        fn_user_pwd_chk.on('keypress', function (e){
             chk_reg.text('')
-            if(!reg.test(user_pwd.val())){
-                chk_reg.text('비밀번호는 8자 이상이어야 하며, 숫자/대문자/소문자/특수문자를 모두 포함해야 합니다.')
+            if(fn_user_pwd.val() != fn_user_pwd_chk.val()){
+                chk_reg.text('비밀번호가 일치하지않습니다.')
                 pwd_result = false;
-            }else{
-                chk_reg.text('사용 가능한 비밀번호입니다.')
+            }else if(fn_user_pwd.val() == fn_user_pwd_chk.val()){
+                chk_reg.text('비밀번호가 일치합니다.')
+                pwd_result = true;
             }
         })
 
