--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -3458,7 +3458,38 @@ textarea.form-control-lg {
 .dropstart {
   position: relative;
 }
+/*수정*/
+.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+/*수정*/
 .dropdown-toggle {
   white-space: nowrap;
 }
@@ -3713,6 +3744,8 @@ textarea.form-control-lg {
 .dropdown-menu.show {
   display: block;
 }
+
+
 
 .dropdown-header {
   display: block;
