--- a/src/main/resources/templates/fragments/topnav.html
+++ b/src/main/resources/templates/fragments/topnav.html
@@ -24,10 +24,13 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{/body/index}">Home</a></li>
                 <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" th:href="@{/board/list.go}" role="link" id="dropdownlink"
+                    <a class="nav-link dropdown-toggle" role="link" id="dropdownlink"
                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">게시판</a>
 
-                    <ul class="dropdown-menu" aria-labelby="dropdownlink">
+                    <ul class="dropdown-menu" aria-labelby="dropdownlink" th:each="board : ${board_list}">
+                        <li th:scope="col">
+                            <a class="dropdown-item" th:text="${board.category_code}" th:href="@{/board/list.go}">전체 게시글</a>
+                        </li>
                         <li><a class="dropdown-item">정치</a></li>
                         <li><a class="dropdown-item">유머</a></li>
                         <li><a class="dropdown-item">자유</a></li>
