--- a/src/main/resources/templates/body/board/list.html
+++ b/src/main/resources/templates/body/board/list.html
@@ -69,6 +69,7 @@
                     </td>
                 </tr>
             </tbody>
+            <ul class-="paging"
         </table>
         <div class="row">
             <div class="col-auto mr-auto"></div>
